go to test button mobile issue fixed

--- a/src/components/landing-page/landing-page.scss
+++ b/src/components/landing-page/landing-page.scss
@@ -70,10 +70,7 @@
     }
 
     @media only screen and (max-width:1080px){
-        min-width: 360px;
-    }
-    @media screen and (max-width:360px) {
-        min-width: 250px;
+        min-width: 280px;
     }
 }
 .wire-css{
